# wi-devctl

./: .gitignore  CHANGELOG.md  README.md  install.sh  manifest.json.example  pyproject.toml
.github/workflows/: create-release-tag.yml  release.yml  tag-on-merge.yml
examples/: protocol.yaml
src/devctl/: __init__.py
src/devctl/cli/: ai_kit.py  devspace.py  local.py  main.py
src/devctl/core/: background_sync.py  backup.py  claude_hooks.py  config_sync.py  protocol_engine.py  repo_manager.py  updater.py  versioning.py
src/devctl/utils/: logging.py  notify.py  shell.py  ssl_certs.py  yaml_loader.py
tests/: test_background_sync.py  test_backup.py  test_claude_hooks.py  test_cli.py  test_config_sync.py  test_notify.py  test_protocol_engine.py  test_repo_manager.py  test_ssl_certs.py  test_updater.py  test_versioning.py
