# Dev install with verbose logging to see where it stalls:
#   pip install -e . -v        # verbose
#   pip install -e . -vv       # more verbose (shows each subprocess)
#   pip install -e . --no-build-isolation  # skip isolated build env (avoids "Installing build dependencies" hang)

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devctl"
version = "0.1.0"
description = "Developer control plane CLI - sync and manage developer tooling configurations from any repo"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
devctl = "devctl.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
